@@ -1604,7 +1604,7 @@ different from <literal>=</literal> because it never gets translated to a
          <term><synopsis>a.'</synopsis></term>
          <listitem>
            <para>
-             Matrix transpose, does not conjugate the entries.  That is, the
+             Matrix transpose, does not conjugate the entries.  That is, 
 	     the i,j element of <varname>a</varname>  becomes the j,i element of <userinput>a.'</userinput>.
            </para>
          </listitem>
@@ -2482,7 +2482,7 @@ First the program looks for the installed library file (the compiled version <fi
 <filename>~/.geniusinit</filename>.
       </para>
       <para>
-If you ever change the library its installed place, you&rsquo;ll have to
+If you ever change the library in its installed place, you&rsquo;ll have to
 first compile it with <command>genius --compile loader.gel &gt; lib.cgel</command>
       </para>
     </sect1>
@@ -5631,7 +5631,7 @@ number of columns times the number of rows.</para>
          <term>AuxiliaryUnitMatrix</term>
          <listitem>
           <synopsis>AuxiliaryUnitMatrix (n)</synopsis>
-          <para>Get the auxiliary unit matrix of size <varname>n</varname>.  This is a square matrix matrix with that is all zero except the
+          <para>Get the auxiliary unit matrix of size <varname>n</varname>.  This is a square matrix with that is all zero except the
 superdiagonal being all ones.  It is the Jordan block matrix of one zero eigenvalue.</para>
           <para>
 	    See
@@ -7014,7 +7014,7 @@ computed by numerical integration using
          <term>NumericalFourierCosineSeriesCoefficients</term>
          <listitem>
           <synopsis>NumericalFourierCosineSeriesCoefficients (f,L,N)</synopsis>
-	  <para>Return a vector of coefficients of the
+	  <para>Return a vector of coefficients of 
 the cosine Fourier series of
 <function>f</function> with half-period <varname>L</varname>.  That is,
 we take <function>f</function> defined on <userinput>[0,L]</userinput>
@@ -7058,7 +7058,7 @@ computed by numerical integration using
          <term>NumericalFourierSineSeriesCoefficients</term>
          <listitem>
           <synopsis>NumericalFourierSineSeriesCoefficients (f,L,N)</synopsis>
-	  <para>Return a vector of coefficients of the
+	  <para>Return a vector of coefficients of 
 the sine Fourier series of
 <function>f</function> with half-period <varname>L</varname>.  That is,
 we take <function>f</function> defined on <userinput>[0,L]</userinput>
