@@ -1,3 +1,9 @@
+Wed Apr 24 15:54:44 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/Makefile.am: fix compile
+
+	* help/C/genius.xml: fix some english issues
+
 Wed Apr 24 15:36:52 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: more sane precision computations especially when
